# Psychopath

./: .gitignore  .gitmodules  CMakeLists.txt  game_tree.cpp  game_tree.h  main.cpp  montecarlo_tree_search.cpp  montecarlo_tree_search.h  test.cpp
.github/workflows/: cmake.yml
notes/: concept_sketch.cpp  graph_sketch.cpp
source/: montecarlo_tree_search.cpp  montecarlo_tree_search.h  solver.cpp  utility.cpp  utility.h
